--- a/Sources/MusicLibraryApi/appsettings.json
+++ b/Sources/MusicLibraryApi/appsettings.json
@@ -1,10 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+	"connectionStrings": {
+		"musicLibraryDB": "Server=localhost;Port=5432;Database=MusicLibraryDb;User Id=postgres;Password=efm5kctL4ylv4KnCZ9IG;"
+	},
+
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft": "Warning",
+			"Microsoft.Hosting.Lifetime": "Information"
+		}
+	},
+	"AllowedHosts": "*"
 }
