--- a/Sources/MusicLibraryApi/MusicLibraryApi.csproj
+++ b/Sources/MusicLibraryApi/MusicLibraryApi.csproj
@@ -8,16 +8,25 @@
     <PackageReference Include="AutoMapper" Version="9.0.0" />
     <PackageReference Include="graphiql" Version="1.2.0" />
     <PackageReference Include="GraphQL" Version="2.4.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.7" PrivateAssets="all" />
     <!-- This package is required for the Entity Framework Core Tools (dotnet ef migrations) to work. -->
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\MusicLibraryApi.Abstractions\MusicLibraryApi.Abstractions.csproj" />
     <ProjectReference Include="..\MusicLibraryApi.Dal.EfCore\MusicLibraryApi.Dal.EfCore.csproj" />
   </ItemGroup>
+
+  <PropertyGroup>
+    <CodeAnalysisRuleSet>..\..\MusicLibraryApi.ruleset</CodeAnalysisRuleSet>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <WarningsAsErrors />
+  </PropertyGroup>
 
 </Project>
