Integrate CF.Library.Logging

--- a/src/MusicLibraryApi/appsettings.json
+++ b/src/MusicLibraryApi/appsettings.json
@@ -3,12 +3,28 @@
 		"musicLibraryDB": "Server=localhost;Port=5432;Database=MusicLibraryDb;User Id=postgres;Password=efm5kctL4ylv4KnCZ9IG;"
 	},
 
-	"Logging": {
-		"LogLevel": {
-			"Default": "Information",
-			"Microsoft": "Warning",
-			"Microsoft.Hosting.Lifetime": "Information"
-		}
-	},
-	"AllowedHosts": "*"
+	"allowedHosts": "*",
+
+	"logging": {
+		"defaultLogLevel": "Debug",
+		"targets": [
+			{
+				"type": "Console",
+				"logLevel": "Debug"
+			},
+			{
+				"type": "RollingFile",
+				"logLevel": "Debug",
+				"settings": {
+					"logPath": "logs",
+					"firstFileNamePattern": "MusicLibraryApi - {YYYY}_{MM}_{DD} - {HH}_{mm}_{SS} - {PID} - START",
+					"fileNamePattern": "MusicLibraryApi - {YYYY}_{MM}_{DD} - {HH}_{mm}_{SS} - {PID}",
+					"fileNameExtension": "log",
+					"rollSize": 4194304,
+					"jsonOutput": false,
+					"messageFormat": "{Timestamp:yyyy.MM.dd HH:mm:ss.fff} [{Level:u3}] [TID: {PrettyThreadId}] {Message}{NewLine}{Exception}"
+				}
+			}
+		]
+	}
 }
