Switch client from GraphQL.Client to raw HttpClient
This change was made for a possibility to use API client in integration tests.
With ASP.NET Core integration tests, the instance of `HttpClient`
with pre-configured handlers is created by `WebApplicationFactory`.
The library GraphQL.Client does not provide extensibility point to inject
or configure `HttpClient` used inside.

--- a/utils/ApiClientUtil/AppSettings.json
+++ b/utils/ApiClientUtil/AppSettings.json
@@ -1,6 +1,6 @@
 {
 	"apiConnection": {
-		"graphQLEndpointUrl": "http://localhost:5000/graphql"
+		"baseUrl": "http://localhost:5000/"
 	},
 
 	"logging": {
