Switch integration tests to strongly typed GraphQL client

--- a/tests/MusicLibraryApi.IntegrationTests/MusicLibraryApi.IntegrationTests.csproj
+++ b/tests/MusicLibraryApi.IntegrationTests/MusicLibraryApi.IntegrationTests.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\MusicLibraryApi.Client\MusicLibraryApi.Client.csproj" />
     <ProjectReference Include="..\..\src\MusicLibraryApi\MusicLibraryApi.csproj" />
   </ItemGroup>
 
