--- a/src/MusicLibraryApi/MusicLibraryApi.csproj
+++ b/src/MusicLibraryApi/MusicLibraryApi.csproj
@@ -23,6 +23,7 @@
   <ItemGroup>
     <ProjectReference Include="..\MusicLibraryApi.Abstractions\MusicLibraryApi.Abstractions.csproj" />
     <ProjectReference Include="..\MusicLibraryApi.Dal.EfCore.Migrations\MusicLibraryApi.Dal.EfCore.Migrations.csproj" />
+    <ProjectReference Include="..\MusicLibraryApi.Logic\MusicLibraryApi.Logic.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
