--- a/src/MusicLibraryApi/appsettings.json
+++ b/src/MusicLibraryApi/appsettings.json
@@ -3,6 +3,10 @@
 		"musicLibraryDB": "Server=localhost;Port=5432;Database=MusicLibraryDb;User Id=postgres;Password=efm5kctL4ylv4KnCZ9IG;"
 	},
 
+	"fileSystemStorage": {
+		"root": "c:\\music"
+	},
+
 	"allowedHosts": "*",
 
 	"logging": {
