--- a/tests/MusicLibraryApi.IntegrationTests/MusicLibraryApi.IntegrationTests.csproj
+++ b/tests/MusicLibraryApi.IntegrationTests/MusicLibraryApi.IntegrationTests.csproj
@@ -28,6 +28,9 @@
     <None Update="TestRunSettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <Content Include="TestData\**">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <PropertyGroup>
