--- a/src/MusicLibraryApi.Tagger/MusicLibraryApi.Tagger.csproj
+++ b/src/MusicLibraryApi.Tagger/MusicLibraryApi.Tagger.csproj
@@ -6,18 +6,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Crc32.NET" Version="1.2.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.7" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="3.0.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" PrivateAssets="all" />
+    <PackageReference Include="taglib-sharp-netstandard2.0" Version="2.1.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\MusicLibraryApi.Abstractions\MusicLibraryApi.Abstractions.csproj" />
-    <ProjectReference Include="..\MusicLibraryApi.Tagger\MusicLibraryApi.Tagger.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
