--- a/src/MusicLibraryApi.Abstractions/MusicLibraryApi.Abstractions.csproj
+++ b/src/MusicLibraryApi.Abstractions/MusicLibraryApi.Abstractions.csproj
@@ -6,15 +6,15 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.7" PrivateAssets="all" />
-    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" PrivateAssets="all" />
-  </ItemGroup>
-
   <PropertyGroup>
     <CodeAnalysisRuleSet>..\..\MusicLibraryApi.ruleset</CodeAnalysisRuleSet>
+    <AnalysisMode>AllEnabledByDefault</AnalysisMode>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningsAsErrors />
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.312" PrivateAssets="all" />
+  </ItemGroup>
 
 </Project>
