--- a/src/MusicLibraryApi/MusicLibraryApi.csproj
+++ b/src/MusicLibraryApi/MusicLibraryApi.csproj
@@ -7,6 +7,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <CodeAnalysisRuleSet>..\..\MusicLibraryApi.ruleset</CodeAnalysisRuleSet>
+    <AnalysisMode>AllEnabledByDefault</AnalysisMode>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <WarningsAsErrors />
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="CodeFuller.Library.Logging" Version="7.2.0" />
     <PackageReference Include="GraphQL.Server.Transports.AspNetCore" Version="4.4.1" />
@@ -14,13 +21,12 @@
     <PackageReference Include="GraphQL.Server.Ui.Playground" Version="4.4.1" />
     <PackageReference Include="GraphQL.Upload.AspNetCore" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.2" />
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.7" PrivateAssets="all" />
     <!-- This package is required for the Entity Framework Core Tools (dotnet ef migrations) to work. -->
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" PrivateAssets="all" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.312" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
@@ -28,11 +34,5 @@
     <ProjectReference Include="..\MusicLibraryApi.Dal.EfCore.Migrations\MusicLibraryApi.Dal.EfCore.Migrations.csproj" />
     <ProjectReference Include="..\MusicLibraryApi.Logic\MusicLibraryApi.Logic.csproj" />
   </ItemGroup>
-
-  <PropertyGroup>
-    <CodeAnalysisRuleSet>..\..\MusicLibraryApi.ruleset</CodeAnalysisRuleSet>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <WarningsAsErrors />
-  </PropertyGroup>
 
 </Project>
