--- a/tests/MusicLibraryApi.IntegrationTests/MusicLibraryApi.IntegrationTests.csproj
+++ b/tests/MusicLibraryApi.IntegrationTests/MusicLibraryApi.IntegrationTests.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <CodeAnalysisRuleSet>..\..\MusicLibraryApi.Tests.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>..\..\MusicLibraryApi.tests.ruleset</CodeAnalysisRuleSet>
     <AnalysisMode>AllEnabledByDefault</AnalysisMode>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningsAsErrors />
